# Org2Conf

./: .dir-locals.el  .gitignore  CMakeLists.txt  Dog.cpp  Dog.h  OrgParser.cpp  OrgParser.h  Settings.cpp  Settings.h  main.cpp  settings.org
